# pure-c-linked-list

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
include/: linked_list.h
tests/: CMakeLists.txt  main.cpp
