cmake_minimum_required(VERSION 3.1.2)

project("Pure C Linked List")

set(CMAKE_BUILD_TYPE Debug)

set(BUILD_PATH ${CMAKE_CURRENT_SOURCE_DIR}/output)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY         ${BUILD_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BUILD_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${BUILD_PATH})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY         ${BUILD_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${BUILD_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG   ${BUILD_PATH})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY         ${BUILD_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${BUILD_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   ${BUILD_PATH})

set(PURE_C_LINKED_LIST_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)

message("Pure C linke list library include path: " ${PURE_C_LINKED_LIST_INCLUDE_PATH})

add_subdirectory(example)
add_subdirectory(tests)